update css style

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
       <div class="weather-dashboard-container col-8">
         <div class="current-weather-display">
           <div class="current-weather-display-left">
-            <span id="current-city"></span>
+            <div id="current-city"></div>
             <span id="current-temp"></span>
+            <img id="current-icon" />
 
           </div>
           <div class="current-weather-display-right row">
