update api and css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="main col">
-      <header>Weather Dashboard</header>
+      <header>Australia Weather Dashboard</header>
       <div class="weather-dashboard-container col-8">
         <div class="current-weather-display">
           <div class="current-weather-display-left">
@@ -36,7 +36,7 @@
             </div>
             <div class="current-uvindex-container col-4">
               <div>UV index</div>
-              <div id="current-uvindex">10</div>
+              <div id="current-uvindex"></div>
             </div>
           </div>
       
