--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
   </head>
   <body>
     <div class="main col">
-      <header>Australia Weather Dashboard</header>
       <div class="weather-dashboard-container col-8">
         <div class="current-weather-display">
           <div class="current-weather-display-left">
             <div id="current-city"></div>
-            <span id="current-temp"></span>
-            <img id="current-icon" />
-
+            <div id="current-time"></div>
+            <div class="current-weather-display-left-bottom">
+              <div><span id="current-temp"></span></div>
+              <div><img id="current-icon" /></div>
+            </div>
           </div>
           <div class="current-weather-display-right row">
             <div class="current-humidity-container col-4">
@@ -39,7 +40,6 @@
               <div id="current-uvindex"></div>
             </div>
           </div>
-      
         </div>
         <div class="app-bottom row">
           <div class="search-section col-12 col-md-4 col-lg-4">
@@ -64,7 +64,7 @@
       </div>
     </div>
   </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
