--- a/index.html
+++ b/index.html
@@ -61,6 +61,25 @@
             <div class="forecastDisplay"></div>
           </div>
         </div>
+        <div class="modal" id="myModal">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title">Error</h4>       
+              </div>
+              <div class="modal-body">
+                <p>Please enter a correct city name</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
